Fix: max-height and overflow for packages

--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -97,10 +97,11 @@
     &__text
       margin-top: 0
       margin-bottom: 45px 
-      max-width: 165px
+      max-height: 165px
       font-weight: normal
       font-size: 14px
       line-height: 22px
+      overflow-y: auto
   &-stars
     display: flex
     align-items: center
